--- a/html/navbar.html
+++ b/html/navbar.html
@@ -13,7 +13,7 @@
           <a class="nav-link" ui-sref="etlap">Étlap</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" ui-sref="contact">kapcsolat</a>
+          <a class="nav-link" ui-sref="contact">Kapcsolat</a>
         </li>
       </ul>
       <form class="d-flex">
