--- a/html/etlap.html
+++ b/html/etlap.html
@@ -4,7 +4,7 @@
     ng-include
     src="'./html/navbar.html'">
   </header>
-  <h1 class="text-center">Étlap</h1>
+  <h1 class="text-center">Eszközök</h1>
   <div class="row">
     <ul
       id="form-tab"
@@ -23,7 +23,7 @@
           type="button"
           aria-controls="tab-1"
           aria-selected="true">
-          Pizza
+          Kések
         </button>
       </li>
 
@@ -39,7 +39,7 @@
           type="button"
           aria-controls="tab-2"
           aria-selected="false">
-          Burger
+          Kanalak
         </button>
       </li>
 
@@ -55,7 +55,7 @@
           type="button"
           aria-controls="tab-3"
           aria-selected="false">
-          Előétel
+          Villák
         </button>
       </li>
       
@@ -71,7 +71,7 @@
           type="button"
           aria-controls="tab-4"
           aria-selected="false">
-          Leves
+          Cukrász eszközök
         </button>
       </li>
 
@@ -87,7 +87,7 @@
           type="button"
           aria-controls="tab-5"
           aria-selected="false">
-          Alacart
+          Gépek
         </button>
       </li>
 
@@ -103,7 +103,7 @@
           type="button"
           aria-controls="tab-6"
           aria-selected="false">
-          Dessert
+          Sütők
         </button>
       </li>
     </ul>
