--- a/html/eszkozok.html
+++ b/html/eszkozok.html
@@ -2,7 +2,7 @@
   <header
     class="navigate-container"
     ng-include
-    src="'./html/navbar.html'">
+    src="'./html/eszkozok.html'">
   </header>
   <h1 class="text-center">Eszközök</h1>
   <div class="row">
