--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Konyhai eszközök és használatuk</title>
-  <link rel="shortcut icon" href="./img/logo.png" type="image/png">
+  <link rel="shortcut icon" href="./img/logo.jpg" type="image/jpg">
 
   <!-- Application components -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.2.3/css/bootstrap.min.css">
