--- a/html/navbar.html
+++ b/html/navbar.html
@@ -10,7 +10,7 @@
           <a class="nav-link active" aria-current="page" ui-sref="home">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" ui-sref="etlap">Eszközök</a>
+          <a class="nav-link" ui-sref="eszkozok">Eszközök</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" ui-sref="contact">Kapcsolat</a>
