--- a/html/navbar.html
+++ b/html/navbar.html
@@ -1,6 +1,6 @@
 <nav class="fixed-top navbar navbar-expand-lg navbar-dark bg-dark justify-content-between">
   <div class="container-fluid">  
-    <a class="navbar-brand" ui-sref="home"><img src="./img/logo_50px.png" alt="Orion Ételbár"/></a>
+    <a class="navbar-brand" ui-sref="home"></a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -10,7 +10,7 @@
           <a class="nav-link active" aria-current="page" ui-sref="home">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" ui-sref="eszkozok">Eszközök</a>
+          <a class="nav-link" ui-sref="eszkoz">Eszközök</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" ui-sref="contact">Kapcsolat</a>
