--- a/html/eszkozok.html
+++ b/html/eszkozok.html
@@ -87,7 +87,7 @@
         aria-labelledby="tab-1-tab">
         <div class="card-container m-3" 
              ng-repeat="x in data" 
-             ng-if="x.type=='PIZZA'">    
+             ng-if="x.type=='Kesek'">    
           <div class="card ">
             <img
               ng-src="./img/{{x.img}}.jpg"
@@ -110,7 +110,7 @@
         class="tab-pane fade p-3 text-center "
         role="tabpanel"
         aria-labelledby="tab-2-tab">
-        <div class="card-container m-3" ng-repeat="x in data" ng-if="x.type=='BURGER'">                  
+        <div class="card-container m-3" ng-repeat="x in data" ng-if="x.type=='Gepek'">                  
           <div class="card">
             <img
               ng-src="./img/{{x.img}}.jpg"
@@ -133,7 +133,7 @@
         class="tab-pane fade p-3 text-center"
         role="tabpanel"
         aria-labelledby="tab-3-tab">
-        <div class="card-container m-3" ng-repeat="x in data" ng-if="x.type=='eloetel'">
+        <div class="card-container m-3" ng-repeat="x in data" ng-if="x.type=='Cukrasz'">
           <div class="card ">
             <img
               ng-src="./img/{{x.img}}.jpg"
@@ -156,7 +156,7 @@
         class="tab-pane fade p-3 text-center"
         role="tabpanel"
         aria-labelledby="tab-4-tab">
-        <div class="card-container m-3" ng-repeat="x in data" ng-if="x.type=='leves'">
+        <div class="card-container m-3" ng-repeat="x in data" ng-if="x.type=='Sutok'">
           <div class="card ">
             <img
               ng-src="./img/{{x.img}}.jpg"
