update img html

--- a/html/eszkozok.html
+++ b/html/eszkozok.html
@@ -90,7 +90,7 @@
              ng-if="x.type=='Kesek'">    
           <div class="card ">
             <img
-              ng-src="./img/{{x.img}}.jpg"
+              ng-src="./img/kesek/{{x.img}}.jpg"
               class="card-img-top"
               alt="{{x.name}}" />
             <div class="card-body">
@@ -113,7 +113,7 @@
         <div class="card-container m-3" ng-repeat="x in data" ng-if="x.type=='Gepek'">                  
           <div class="card">
             <img
-              ng-src="./img/{{x.img}}.jpg"
+              ng-src="./img/gepek/{{x.img}}.jpg"
               class="card-img-top"
               alt="{{x.name}}" />
             <div class="card-body">
@@ -136,7 +136,7 @@
         <div class="card-container m-3" ng-repeat="x in data" ng-if="x.type=='Cukrasz'">
           <div class="card ">
             <img
-              ng-src="./img/{{x.img}}.jpg"
+              ng-src="./img/cukrasz/{{x.img}}.jpg"
               class="card-img-top"
               alt="{{x.name}}" />
             <div class="card-body">
@@ -159,7 +159,7 @@
         <div class="card-container m-3" ng-repeat="x in data" ng-if="x.type=='Sutok'">
           <div class="card ">
             <img
-              ng-src="./img/{{x.img}}.jpg"
+              ng-src="./img/sutok/{{x.img}}.jpg"
               class="card-img-top"
               alt="{{x.name}}" />
             <div class="card-body">
