db update + html

--- a/html/eszkozok.html
+++ b/html/eszkozok.html
@@ -91,7 +91,7 @@
           <div class="card ">
             <img
               ng-src="./img/kesek/{{x.img}}.jpg"
-              class="card-img-top"
+              class="card-img-top item-image"
               alt="{{x.name}}" />
             <div class="card-body">
               <h5 class="card-title">{{x.name}}</h5>
@@ -114,7 +114,7 @@
           <div class="card">
             <img
               ng-src="./img/gepek/{{x.img}}.jpg"
-              class="card-img-top"
+              class="card-img-top item-image"
               alt="{{x.name}}" />
             <div class="card-body">
               <h5 class="card-title">{{x.name}}</h5>
@@ -137,7 +137,7 @@
           <div class="card ">
             <img
               ng-src="./img/cukrasz/{{x.img}}.jpg"
-              class="card-img-top"
+              class="card-img-top item-image"
               alt="{{x.name}}" />
             <div class="card-body">
               <h5 class="card-title">{{x.name}}</h5>
@@ -160,7 +160,7 @@
           <div class="card ">
             <img
               ng-src="./img/sutok/{{x.img}}.jpg"
-              class="card-img-top"
+              class="card-img-top item-image"
               alt="{{x.name}}" />
             <div class="card-body">
               <h5 class="card-title">{{x.name}}</h5>
